[Issue 2] Findbugs and Checkstyle now passing.